# fenetre

./: .gitignore  Cargo.toml  README.md  child_window_template.txt  layout_template.txt
doc/: fenetre_api.odt
examples/editor/: Cargo.toml
examples/editor/src/: main.rs
examples/image_viewer/: Cargo.toml
examples/image_viewer/src/: main.rs
examples/simple_window/: Cargo.toml
examples/simple_window/src/: main.rs
src/: border_layout.rs  button.rs  child_window.rs  context_menu.rs  image_view.rs  label.rs  layout_base.rs  lib.rs  line_edit.rs  list.rs  menubar.rs  multi_line_edit.rs  popup.rs  row_layout.rs  scroll_bar.rs  scroll_layout.rs  slider.rs  status_bar.rs  tab_layout.rs  table.rs  text_font.rs  tooltip.rs  window_base.rs  window_utils.rs
