[package]
name = "fenetre"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure Rust-based GUI library"

[dependencies]
winit = "0.30.11"
softbuffer = "0.4.6"
tiny-skia = "0.11.4"
fontdue = "0.9.3"
image = "0.25.6"
chrono = "0.4.41"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
