[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
fenetre = { path = "../.." }
winit = "0.30.8"
tiny-skia = "0.11.4"
dirs = "6.0.0"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
